--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "kona3engine/fw_simple"]
 	path = kona3engine/fw_simple
-	url = https://github.com:kujirahand/php_fw_simple.git
+	url = https://github.com/kujirahand/php_fw_simple.git
