add sakuramml plugins

--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,11 @@
+
+error_reporting = E_ALL | E_STRICT
+display_errors = off
+log_errors = On
+
 [Date]
 date.timezone = "Asia/Tokyo"
 
 [mbstring]
 mbstring.language = Japanese
+
