/privateと/dataに対するセキュリティを強化

--- a/private/.htaccess
+++ b/private/.htaccess
@@ -1,3 +1,8 @@
-order deny,allow
-deny from all
-
+# Deny all access
+<IfModule mod_authz_core.c>
+  Require all denied
+</IfModule>
+<IfModule !mod_authz_core.c>
+  Order Allow,Deny
+  Deny from all
+</IfModule>
